--- a/.web/package.json
+++ b/.web/package.json
@@ -16,11 +16,13 @@
     "framer-motion": "^6.3.3",
     "gridjs": "^4.0.0",
     "gridjs-react": "^4.0.0",
+    "json5": "^2.2.3",
     "next": "^12.1.0",
     "next-sitemap": "^3.1.52",
     "plotly.js": "2.6.4",
     "prettier": "^2.8.1",
     "react": "^17.0.2",
+    "react-confetti": "^6.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
@@ -32,7 +34,6 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "socket.io-client": "^4.5.4",
-    "victory": "^36.6.8",
-    "json5": "^2.2.3"
+    "victory": "^36.6.8"
   }
 }
